@@ -1,3 +1,10 @@
+2007-09-10  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/SessionContextStore.java: added method
+	getServletNames() which returns the servlet names under which
+	Contexts are stored (needed for generic access to Context by
+	various applications)
+
 2007-09-06  Sebastian Marsching  <sebastian.marsching@1und1.de>
 
 	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
